--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -274,11 +274,36 @@
             mobileFirst: true,
             pauseOnFocus: false,
             rows: 1,
-            slidesPerRow: 2,
-            slidesToShow: 2,
+            slidesPerRow: 3,
+            slidesToShow: 3,
             slidesToScroll: 1,
             swipe: true,
-            swipeToSlide: true
+            swipeToSlide: true,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 1,
+                        infinite: true,
+                        dots: true
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 1
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
         });
     });
 
