--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -23,8 +23,11 @@
     <a href="/admin">
         <li class="list-group-item">Home</li>
     </a>
+    <a href="/admin/campus-ambassador">
+        <li class="list-group-item">Campus Program <span class="blink">[New]</span></li>
+    </a>
     <a href="/createNewBlog">
-        <li class="list-group-item">New Blog <span class="blink">[New]</span></li>
+        <li class="list-group-item">New Blog</li>
     </a>
     <a href="/admin/push">
         <li class="list-group-item">Push Notifications</li>
