Adding Campus Ambassador Feature On HomePage

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,7 +29,7 @@
 				<small>Not able to decide which course to join?</small>
 				<br/>Try our course chooser
         </a>-->
-            <a href="/campus-ambassador" data-toggle="modal" data-target="#CourseChooserModal">
+            <a href="/campus-ambassador">
 				Become Codeshala's Campus Ambassador
 				<br/>Apply Now
         </a>
