All minor bugs Fixed

--- a/views/campusambassador/campus_ambassador.ejs
+++ b/views/campusambassador/campus_ambassador.ejs
@@ -19,7 +19,6 @@
             font-size: 15px
         }
 
-
     </style>
 </head>
 </head>
@@ -32,17 +31,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">CODESHALA</a>
+            <a class="navbar-brand" href="/">CODESHALA</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
 
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Assignments</a></li>
-                <li><a href="#">Contests</a></li>
-                <li><a href="#">IDE</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/assignments">Assignments</a></li>
+                <li><a href="/contests">Contests</a></li>
+                <li><a href="/ide">IDE</a></li>
             </ul>
         </div>
     </div>
@@ -232,7 +231,7 @@
 
                 <label for="lname" style="color: #9c9c63;font-weight: bold;margin-top: 10px;">LINK TO YOUR FACEBOOK
                     PROFILE</label><br>
-                <input type="text" id="social_links" name="social_links" placeholder="Your fb profile link.."
+                <input type="text" id="" name="social_links" placeholder="Your fb profile link.."
                        style="background:#cdcdb1;height: 40px;width: 100%;border:none;padding: 10px;">
                 <label for="message" style="color: #9c9c63;font-weight: bold;margin-top: 10px;">ANY OTHER
                     PROFILE</label>
