--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,6 +11,7 @@
         .slick-next:before, .slick-prev:before {
             color: #191919;
         }
+        .blink {animation: blink-animation 1s steps(3, start) infinite;-webkit-animation: blink-animation 1s steps(3, start) infinite;color: #fd8900;}@keyframes blink-animation {to {visibility: hidden;}}@-webkit-keyframes blink-animation {to {visibility: hidden;} 
     </style>
 </head>
 <body>
@@ -31,7 +32,7 @@
         </a>-->
             <a href="/campus-ambassador">
 				Become Codeshala's Campus Ambassador
-				<br/>Apply Now
+				<br/>Apply Now<span class="blink"> [New]</span>
         </a>
         </span>
         <br/>
