Modify Codeshala name in mail and campus ambassador program page

--- a/views/campusambassador/campus_ambassador.ejs
+++ b/views/campusambassador/campus_ambassador.ejs
@@ -69,14 +69,14 @@
             <h2 class="uppercase color-primary mb40 mb-xs-24"
                 style="color:  #9c9c63;letter-spacing: 1.5px;margin-bottom: 20px;">OVERVIEW</h2>
 
-            <p style="letter-spacing: 1.2px;margin-top: 10px;">The CodeShala Campus Ambassador Program is a platform for
+            <p style="letter-spacing: 1.2px;margin-top: 10px;">The Codeshala Campus Ambassador Program is a platform for
                 students who are passionate about programming to start and run an active programming club in their
-                college. A CodeShala Campus Ambassador is a leader with a keen interest in starting and building a
+                college. A Codeshala Campus Ambassador is a leader with a keen interest in starting and building a
                 programming community.</p>
 
             <p style="letter-spacing: 1.2px;">Students having strong leadership and immense love for programming, are
                 most welcome to be a part of our extended family on their campus.
-                If you feel you have the qualities to be a CodeShala Campus Ambassador, we invite you to join the clan
+                If you feel you have the qualities to be a Codeshala Campus Ambassador, we invite you to join the clan
                 and be a part of the community.
             </p>
             <div style="margin-top: 50px;">
@@ -86,7 +86,7 @@
                 </h2>
             </div>
             <ol style="text-align: left;letter-spacing: 1.2px;" class="col-md-11 col-md-offset-1" style="">
-                <li>Special CodeShala swag Pack T-shirt, Bag,Bottles,Mugs, Pen drive and Stickers.</li>
+                <li>Special Codeshala swag Pack T-shirt, Bag,Bottles,Mugs, Pen drive and Stickers.</li>
                 <li>Certificate and letter of recommendation on successful completion of the program.</li>
                 <li>Student referral rewards.</li>
                 <li>Meet targets, get our courses for free.</li>
@@ -108,12 +108,12 @@
             </h2>
 
             <ol style="text-align: left;letter-spacing: 1.2px;" class="col-md-11 col-md-offset-1">
-                <li>You will be the face, voice, and evangelist of CodeShala at your campus</li>
-                <li>Introduce new and experienced programmers to CodeShala Platform.</li>
+                <li>You will be the face, voice, and evangelist of Codeshala at your campus</li>
+                <li>Introduce new and experienced programmers to Codeshala Platform.</li>
                 <li> Connect us to the programming club and placement cells of your college.</li>
                 <li>Promote our courses in your college.</li>
-                <li>Conduct CodeShala workshops (Paid or Free) and programming events in your campus.</li>
-                <li>Come up with innovative ideas on how CodeShala can associate with your college.</li>
+                <li>Conduct Codeshala workshops (Paid or Free) and programming events in your campus.</li>
+                <li>Come up with innovative ideas on how Codeshala can associate with your college.</li>
                 <li>Organize Tech Talks and meet-ups in college canteen/campus with Mentors & Alumni.</li>
                 <li>Any innovative idea will be rewarded as well.</li>
             </ol>
